# add-dependent-file

./: .gitignore  README.md  add-dependent-file.cabal  add-dependent-file.cabal.template  changelog.md  flake.nix
src/: AddDependentFile.hs
src/AddDependentFile/: Test.hs
