cabal-version: 3.0
name:          add-dependent-file
version:       0.0.1
synopsis:      Safer TH addDependentFile wrapper
description:
    The library provides a safer wrapper around
    <https://hackage.haskell.org/package/template-haskell/docs/Language-Haskell-TH-Syntax.html#v:addDependentFile addDependentFile>
    that checks that @extra-source-files@ section in the cabal file contains
    __addDependendFile__ argument and issues a correspondent compilation
    warning if it does not, because @addDependentFile@ has no effect
    otherwise.
    
    == Development environment
    #development-environment#
    
    > $ nix develop
    > $ emacs &
    > $ cabal build
    > $ cabal test
homepage:      http://github.com/yaitskov/add-dependent-file
license:       BSD-3-Clause
license-file:  LICENSE
author:        Daniil Iaitskov
maintainer:    dyaitskov@gmail.com
copyright:     Daniil Iaitkov 2026
category:      System
build-type:    Simple
bug-reports:   https://github.com/yaitskov/add-dependent-file/issues
extra-source-files:
  README.md
extra-doc-files:
  changelog.md
tested-with:
  GHC == 9.12.2

source-repository head
  type:
    git
  location:
    https://github.com/yaitskov/add-dependent-file.git

library
  hs-source-dirs: src
  exposed-modules:
    AddDependentFile
  other-modules:
    AddDependentFile.Test
  default-language: GHC2024
  ghc-options: -Wall
  default-extensions:
    DefaultSignatures
    NoImplicitPrelude
    OverloadedStrings
    TemplateHaskell
  build-depends:
    , Cabal                   < 4
    , Cabal-syntax            < 4
    , base           >=4.7 && < 5
    , bytestring              < 1
    , directory               < 2
    , filepath                < 2
    , regex-compat            < 1
    , template-haskell        < 3
